replaced valmar with fpoitevi in conda-forge.yml

--- a/conda-forge.yml
+++ b/conda-forge.yml
@@ -14,8 +14,8 @@ provider:
   linux: travis
 channels:
   sources:
-    - valmar
+    - fpoitevi
     - conda-forge
     - defaults
   targets:
-    - ["valmar", "main"]
+    - ["fpoitevi", "main"]
