--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -1,4 +1,4 @@
 channel_sources:
-  - valmar,conda-forge,defaults
+  - fpoitevi,conda-forge,defaults
 channel_targets:
-  - valmar main
+  - fpoitevi main
