MNT: Re-rendered with conda-build 3.21.4, conda-smithy 3.9.0, and conda-forge-pinning 2021.03.19.08.01.08

--- a/.ci_support/linux_64_.yaml
+++ b/.ci_support/linux_64_.yaml
@@ -3,9 +3,9 @@ boost:
 cdt_name:
 - cos6
 channel_sources:
-- valmar,conda-forge,defaults
+- fpoitevi,conda-forge,defaults
 channel_targets:
-- valmar main
+- fpoitevi main
 cxx_compiler:
 - gxx
 cxx_compiler_version:
